# pytrading

./: .gitignore  README.md  pyproject.toml  setup-vm.sh  update-vm.sh
notebooks/: binance.ipynb
src/: backtesting_strategy.py  binance.ipynb  bot_rsi_adx.py  main.py
src/formatters/: binance_formatter.py
src/strategies/: flat_market.py  rsi_adx.py  sma_cross.py
