[tool.poetry]
name = "pytrading"
version = "0.1.0"
description = ""
authors = ["Brice Boudehent <brice.boudehent@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
